# arrival-board

./: .flake8  .gitignore  README.md  app.py  pyproject.toml  run.py
.github/workflows/: lint-test.yml
arrivalboard/: __init__.py  app.py  config.py  latlon.py  services.py  traffic.py
arrivalboard/aircraft/: data.py  models.py
arrivalboard/airport/: data.py  models.py
arrivalboard/config/: arrivalboard.toml  opensky.toml
arrivalboard/config/airports/: kord.toml
arrivalboard/data/: adsb.py  airport.py  airport_toml.py  opensky.py
arrivalboard/datasources/: opensky.py
arrivalboard/helpers/: latlon.py
arrivalboard/models/: aircraft.py  airport.py
arrivalboard/services/: arrivals.py
config/: arrivalboard.toml
tests/: test_config.py  test_latlon.py
tests/airport/: test_models.py
tests/config/: arrivalboard-invalid-adsb.toml  arrivalboard-invalid-opensky-auth.toml  arrivalboard-invalid-opensky.toml  arrivalboard-opensky-noauth.toml  arrivalboard-opensky.toml  opensky_auth.toml
